feat: add insert tenant role and create swagger docs
